# Socket-Programming-yocto

./: README.md  final-project.bb
files/: CMakeLists.txt
files/Application/: CMakeLists.txt  TCP_cli_main.cpp  TCP_serv_main.cpp  UDP_cli1_main.cpp  UDP_cli2_main.cpp  UDP_serv_main.cpp
files/Channel/: CMakeLists.txt
files/Channel/inc/: channel.hpp  client.hpp  server.hpp
files/Channel/src/: client.cpp  server.cpp
files/Socket/: CMakeLists.txt
files/Socket/inc/: TCPsocket.hpp  UDPsocket.hpp  socket.hpp
files/Socket/src/: TCPsocket.cpp  UDPsocket.cpp
